# streambed-rs

./: .gitignore  Cargo.toml  README.md  RELEASE.md
.github/workflows/: test.yml
examples/iot-service/: Cargo.toml  README.md
examples/iot-service/src/: database.rs  http_server.rs  main.rs  udp_server.rs
src/: base64_serde.rs  commit_log.rs  crypto.rs  delayer.rs  lib.rs  secret_store.rs
src/confidant/: README.md  mod.rs
src/kafka/: mod.rs
src/logged/: README.md  mod.rs
src/state_storage/: args.rs  mod.rs
src/vault/: args.rs  mod.rs
streambed/: Cargo.toml
streambed-codec/: .gitignore  Cargo.toml  README.md
streambed-codec/src/: lib.rs
streambed-confidant/: Cargo.toml  README.md
streambed-confidant-cli/: Cargo.toml  README.md
streambed-confidant-cli/src/: cryptor.rs  errors.rs  main.rs
streambed-confidant/examples/: README.md  confidant.rs  main.rs
streambed-confidant/src/: args.rs  lib.rs
streambed-kafka/: Cargo.toml  README.md
streambed-kafka/src/: args.rs  lib.rs
streambed-kafka/tests/: commit_log.rs  mod.rs
streambed-logged/: Cargo.toml  README.md
streambed-logged-cli/: Cargo.toml  README.md
streambed-logged-cli/src/: errors.rs  main.rs  producer.rs  subscriber.rs
streambed-logged/benches/: benches.rs
streambed-logged/src/: args.rs  compaction.rs  lib.rs  topic_file_op.rs
streambed-patterns/: Cargo.toml  README.md
streambed-patterns/examples/: ask.rs
streambed-patterns/src/: ask.rs  lib.rs
streambed-proto/: README.md
streambed-proto/src/: commit_log.proto  stdce.proto
streambed-storage/: Cargo.toml  README.md
streambed-storage/src/: args.rs  lib.rs
streambed-test/: Cargo.toml  README.md
streambed-test/src/: lib.rs  server.rs
streambed-vault/: Cargo.toml  README.md
streambed-vault/examples/: README.md  main.rs  vault.rs
streambed-vault/src/: args.rs  lib.rs
streambed-vault/tests/: mod.rs  secret_store.rs
streambed/src/: commit_log.rs  crypto.rs  delayer.rs  lib.rs  secret_store.rs
tests/: commit_log.rs  mod.rs  secret_store.rs
tests/support/: server.rs
