[workspace]

members = [
    "streambed",
    "streambed-confidant",
    "streambed-kafka",
    "streambed-logged",
    "streambed-patterns",
    "streambed-storage",
    "streambed-test",
    "streambed-vault",

    "examples/iot-service",
]

[workspace.dependencies]
aes ="0.8.2"
async-stream = "0.3.3"
async-trait = "0.1.60"
base64 = "0.20.0"
bytes = "1.3.0"
cache_loader_async = "0.2.1"
chrono = "0.4.23"
ciborium = "0.2"
clap = "4.0.29"
env_logger = "0.10.0"
exponential-backoff = "1.1.0"
git-version = "0.3.5"
hex = "0.4.3"
http = "0.2.8"
hmac = "0.12.1"
humantime = "2.1.0"
hyper = "0.14.23"
log = "0.4.17"
metrics = "0.20.1"
postcard = "1.0.2"
rand = "0.8.5"
reqwest = "0.11.13"
scopeguard = "1.1"
serde = "1.0.151"
serde_json = "1.0.90"
sha2 = "0.10.6"
test-log = "0.2.11"
tokio = "1.23.0"
tokio-stream = "0.1.11"
tokio-util = "0.7.4"
warp = "0.3"
