[workspace]
resolver = "2"

members = [
    "streambed",
    "streambed-codec",
    "streambed-confidant",
    "streambed-confidant-cli",
    "streambed-kafka",
    "streambed-logged",
    "streambed-logged-cli",
    "streambed-patterns",
    "streambed-storage",
    "streambed-test",
    "streambed-vault",
    "examples/iot-service",
]

[workspace.package]
version = "0.11.1"                                           # WHEN CHANGING THIS, CHANGE THE "STREAMBED" DEPENDENCIES BELOW ALSO.
edition = "2021"
rust-version = "1.70.0"
license = "Apache-2.0"
repository = "https://github.com/streambed/streambed-rs.git"

[workspace.dependencies]
aes = "0.8.2"
async-stream = "0.3.3"
async-trait = "0.1.60"
base64 = "0.20.0"
bytes = "1.3.0"
cache_loader_async = "0.2.1"
chrono = "0.4.23"
ciborium = "0.2"
clap = "4.0.29"
crc = "3.0.1"
criterion = "0.4.0"
env_logger = "0.10.0"
exponential-backoff = "1.1.0"
futures-util = "0.3"
hex = "0.4.3"
http = "0.2.8"
hmac = "0.12.1"
humantime = "2.1.0"
hyper = { version = "0.14.23", default-features = false }
log = "0.4.17"
metrics = { version = "0.20.1", default-features = false }
postcard = { version = "1.0.8", default-features = false }
rand = "0.8.5"
reqwest = "0.11.13"
scopeguard = "1.1"
serde = "1.0.151"
serde_json = "1.0.90"
serde_with = "2.0.1"
sha2 = "0.10.6"
smol_str = "0.2.0"
test-log = "0.2.11"
tokio = "1.23.0"
tokio-stream = "0.1.11"
tokio-util = "0.7.4"
warp = "0.3"

streambed = { path = "streambed", version = "0.11.1" }
streambed-confidant = { path = "streambed-confidant", version = "0.11.1" }
streambed-logged = { path = "streambed-logged", version = "0.11.1" }
streambed-test = { path = "streambed-test", version = "0.11.1" }
