[package]
name = "streambed-confidant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
cache_loader_async = { workspace = true, features = ["lru-cache", "ttl-cache"] }
clap = { workspace = true, features = ["derive", "env"] }
hex = { workspace = true }
humantime = { workspace = true }
postcard = { workspace = true, default-features = false, features = ["use-std"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }

streambed = { path = "../streambed" }

[dev-dependencies]
env_logger = { workspace = true }
git-version = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
test-log = { workspace = true }
