[package]
name = "streambed-kafka"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
humantime = { workspace = true }
log = { workspace = true }
metrics = { workspace = true, default-features = false }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smol_str = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
tokio-stream = { workspace = true }

streambed = { path = "../streambed", features = ["reqwest"] }

[dev-dependencies]
env_logger ={ workspace = true }
http = { workspace = true }
hyper = { workspace = true, default-features = false, features = ["tcp", "stream", "http1", "http2", "client", "server", "runtime"] }
test-log = { workspace = true }

streambed-test = { path = "../streambed-test" }
