[package]
name = "streambed-logged-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A CLI for a file-system-based commit log"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
git-version = { workspace = true }
humantime = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
streambed = { workspace = true }
streambed-logged = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[[bin]]
name = "logged"
path = "src/main.rs"
