[package]
name = "streambed-logged"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
crc = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
postcard = { workspace = true, default-features = false, features = ["use-std", "use-crc"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["chrono_0_4"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }

streambed = { path = "../streambed" }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }
env_logger = { workspace = true }
test-log = { workspace = true }

[[bench]]
name = "benches"
harness = false
