[package]
name = "streambed-logged"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Logged is a small library that implements a file-system-based commit log"

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
crc = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
postcard = { workspace = true, default-features = false, features = ["use-std", "use-crc"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["chrono_0_4"] }
smol_str = { workspace = true, features = ["serde"] }
streambed = { workspace = true }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }
env_logger = { workspace = true }
test-log = { workspace = true }

[[bench]]
name = "benches"
harness = false
