[package]
name = "streambed-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Functionality for loading an persisting structures"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
humantime = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
streambed = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
