[package]
name = "streambed-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A collection of utilities that facilitate unit and integration testing"

[dependencies]
http = { workspace = true }
hyper = { workspace = true, default-features = false, features = ["tcp", "stream", "http1", "http2", "client", "server", "runtime"] }
tokio = { workspace = true }
