[package]
name = "streambed-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Provides an implementation of the Streambed secret store to be used with the Hashicorp Vault API"

[dependencies]
async-trait = { workspace = true }
cache_loader_async = { workspace = true, features = ["lru-cache", "ttl-cache"] }
clap = { workspace = true, features = ["derive", "env"] }
humantime = { workspace = true }
log = { workspace = true }
metrics = { workspace = true, default-features = false }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
streambed = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
http = { workspace = true }
hyper = { workspace = true, default-features = false, features = ["tcp", "stream", "http1", "http2", "client", "server", "runtime"] }
streambed = { workspace = true, features = ["reqwest"] }
streambed-test = { workspace = true }
test-log = { workspace = true }
tokio-stream = { workspace = true }
