[package]
name = "streambed"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
cache_loader_async = { workspace = true, features = ["lru-cache", "ttl-cache"] }
chrono = { workspace = true }
exponential-backoff = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
