[package]
name = "streambed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Streambed core library components"

[dependencies]
aes = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
exponential-backoff = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["base64"] }
sha2 = { workspace = true }
smol_str = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = [ "macros", "rt" ] }
tokio-stream = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
# Use the reqwest library with its default features incl. TLS
reqwest = ["dep:reqwest"]